--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,7 +16,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v2
-     
+      with:
+          java-version: 11
+          
+    - name: Cache Gradle packages
+      uses: gradle/gradle-build-action@v2.0-beta.7
+  
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
