--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,7 +18,8 @@ jobs:
       uses: actions/setup-java@v2
       with:
           java-version: 11
-          
+          distribution: 'adopt'
+                  
     - name: Cache Gradle packages
       uses: gradle/gradle-build-action@v2.0-beta.7
   
