--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,6 +18,7 @@ jobs:
       uses: actions/setup-java@v2
       with:
         java-version: 15
+        distribution: 'temurin'
                          
     - name: Cache Gradle packages
       uses: gradle/gradle-build-action@v2.0-beta.7
