--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,20 +10,19 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 15
-      uses: actions/setup-java@v2
-      with:
-        java-version: 15
-        distribution: 'temurin'
-                         
-    - name: Cache Gradle packages
-      uses: gradle/gradle-build-action@v2.0-beta.7
+      - uses: actions/checkout@v2
+      - name: Set up JDK 15
+        uses: actions/setup-java@v1
+        with:
+          java-version: 15
+                                   
+      - name: Cache Gradle packages
+        uses: gradle/gradle-build-action@v2.0-beta.7
   
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew build
