--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up JDK 15
         uses: actions/setup-java@v1
         with:
-          java-version: 15
+          java-version: 11.0.13+8
                                    
       - name: Cache Gradle packages
         uses: gradle/gradle-build-action@v2.0-beta.7
