--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,8 @@ jobs:
                                    
       - name: Cache Gradle packages
         uses: gradle/gradle-build-action@v2.0-beta.7
+        with:
+          gradle-version: 6.5
   
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
