--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,9 +20,9 @@ jobs:
           java-version: 11.0.13+8
                                    
       - name: Cache Gradle packages
-        uses: gradle/gradle-build-action@v2.0-beta.7
+        uses: actions/cache@v1
         with:
-          gradle-version: 6.5
+          path: ~/.gradle/caches
   
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
