--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,9 +20,7 @@ jobs:
           java-version: 11.0.13+8
                                    
       - name: Cache Gradle packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.gradle/caches
+        uses: gradle/gradle-build-action@v2
   
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
