--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,7 +18,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11.0.13+8
-                                   
+      
+      - name: Wrapper init
+        uses: gradle/wrapper-validation-action@v1
       - name: Cache Gradle packages
         uses: gradle/gradle-build-action@v2
         with:
