--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,8 +23,9 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 6.5
-      - name: Wrapper init
-        uses: gradle/wrapper-validation-action@v1
+      
+      - run: ./gradlew wrapper
+        
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
