--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,22 +10,17 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11.0.13+8
-      
-      - name: Cache Gradle packages
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: 6.5
-        
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - run: ./gradlew wrapper
-      - name: Build with Gradle
-        run: ./gradlew build
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+        cache: gradle
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      run: ./gradlew build
