--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,12 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
         cache: gradle
+        
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+      
     - name: Build with Gradle
       run: ./gradlew build
+      
+    - name: Run Mutation tests
+      run: ./gradlew pitest
