pitest testing added

--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,22 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
-    testImplementation 'org.assertj:assertj-core:3.20.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation 'org.assertj:assertj-core:3.21.0'
 }
 
 test {
     useJUnitPlatform()
+}
+
+pitest {
+    targetClasses = ["com.arnava.interpreter.*"]
+    junit5PluginVersion = "0.15"
+    threads = 8
+    outputFormats= ["XML", "HTML"]
+    testStrengthThreshold.set(85)
+    coverageThreshold.set(95)
 }
 
 jacocoTestCoverageVerification {
