--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,3 +29,12 @@ jobs:
       
     - name: Run Mutation tests
       run: ./gradlew pitest
+
+    - name: Run Test Coverage
+      run: ./gradlew jacocoTestReport
+
+    - name: Generate JaCoCo Badge
+      uses: cicirello/jacoco-badge-generator@v2
+      with:
+        generate-branches-badge: true
+        jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
