close #14 coverage badge added

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,12 @@ pitest {
     coverageThreshold.set(95)
 }
 
+jacocoTestReport {
+    reports {
+        csv.required = true
+    }
+}
+
 jacocoTestCoverageVerification {
     violationRules {
         rule {
