--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,3 +38,14 @@ jobs:
       with:
         generate-branches-badge: true
         jacoco-csv-file: build/reports/jacoco/test/jacocoTestReport.csv
+
+    - name: Log coverage percentage
+      run: |
+        echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+        echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
+    - name: Add new badge
+      uses: EndBug/add-and-commit@v7
+      with:
+        default_author: github_actions
+        message: 'upload badge'
+        add: '*.svg'
