--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,6 +29,11 @@ jobs:
       
     - name: Run Mutation tests
       run: ./gradlew pitest
+      
+    - name: Upload mutation test report
+      run: ./.github/upload-mutation-report.sh
+      env:
+        API_KEY: ${{ secrets.STRYKER_DASHBOARD_TOKEN }}
 
     - name: Run Test Coverage
       run: ./gradlew jacocoTestReport
