--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,10 +32,10 @@ jobs:
       run: ./gradlew pitest
       
     - name: Run test Script
-      run: chmod +x ./.github/testScript.sh  
+      run: chmod +x .github/testScript.sh  
       
     - name: Upload mutation test report
-      run: chmod +x ./.github/upload-mutation-report.sh
+      run: chmod +x .github/upload-mutation-report.sh
       env:
         API_KEY: ${{ secrets.STRYKER_DASHBOARD_TOKEN }}
 
