--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,10 +32,14 @@ jobs:
       run: ./gradlew pitest
       
     - name: Run test Script
-      run: chmod +x .github/testScript.sh  
+      run: |
+        chmod +x .github/testScript.sh  
+      shell: bash
       
     - name: Upload mutation test report
-      run: chmod +x .github/upload-mutation-report.sh
+      run: |
+        chmod +x .github/upload-mutation-report.sh
+      shell: bash
       env:
         API_KEY: ${{ secrets.STRYKER_DASHBOARD_TOKEN }}
 
