--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,12 +33,12 @@ jobs:
       
     - name: Run test Script
       run: |
-        chmod +x .github/testScript.sh  
+        chmod +x ./.github/testScript.sh  
       shell: bash
       
     - name: Upload mutation test report
       run: |
-        chmod +x .github/upload-mutation-report.sh
+        chmod +x ./.github/upload-mutation-report.sh
       shell: bash
       env:
         API_KEY: ${{ secrets.STRYKER_DASHBOARD_TOKEN }}
