--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,13 +33,12 @@ jobs:
       
     - name: Run test Script
       run: |
-        chmod +x ./.github/testScript.sh  
-      shell: bash
+        sh chmod +x ./.github/testScript.sh  
+
       
     - name: Upload mutation test report
       run: |
-        chmod +x ./.github/upload-mutation-report.sh
-      shell: bash
+        sh chmod +x ./.github/upload-mutation-report.sh
       env:
         API_KEY: ${{ secrets.STRYKER_DASHBOARD_TOKEN }}
 
