--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,14 +31,8 @@ jobs:
     - name: Run Mutation tests
       run: ./gradlew pitest
       
-    - name: Run test Script
-      run: |
-        sh chmod +x ./.github/testScript.sh  
-
-      
     - name: Upload mutation test report
-      run: |
-        sh chmod +x ./.github/upload-mutation-report.sh
+      run: chmod +x ./.github/upload-mutation-report.sh
       env:
         API_KEY: ${{ secrets.STRYKER_DASHBOARD_TOKEN }}
 
