--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,7 +32,10 @@ jobs:
       run: ./gradlew pitest
       
     - name: Upload mutation test report
-      run: ./.github/upload-mutation-report.sh
+      run: |
+        chmod +x ./.github/upload-mutation-report.sh
+        ./.github/upload-mutation-report.sh
+        
       env:
         API_KEY: ${{ secrets.STRYKER_DASHBOARD_TOKEN }}
 
