--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,6 +28,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
       
+    - name: clean build
+      run: ./gradlew clean
+      
     - name: Run Mutation tests
       run: ./gradlew pitest
       
