--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,5 +25,5 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build
 
-    - name: Publish to sonartype
+    - name: Publish to GitHub
       run: ./gradlew publish
