--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
     id 'maven-publish'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'com.arnava'
+version '1.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -29,7 +29,7 @@ publishing {
             name = "GitHubPackages"
             url = uri("https://maven.pkg.github.com/mrlis89/Interpreter")
             credentials {
-                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+                username = 'mrlis89'
                 password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
             }
         }
