--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
     id 'maven-publish'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'com.arnava'
+version '1.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
