--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'com.arnava'
-version '1.1-SNAPSHOT'
+version '1.1'
 
 repositories {
     mavenCentral()
@@ -17,6 +17,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation 'org.assertj:assertj-core:3.21.0'
     pitest 'io.github.wmaarts:pitest-mutation-testing-elements-plugin:0.4.0'
+
 }
 
 test {
