--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -54,6 +54,7 @@ jobs:
     - name: Add new badge
       uses: EndBug/add-and-commit@v7
       with:
+        branch_mode: create
         default_author: github_actions
         message: 'upload badge'
         add: '*.svg'
